--- a/shippable.yml
+++ b/shippable.yml
@@ -8,7 +8,7 @@ jobs:
         - script: secs=10; SECONDS=0; while (( SECONDS < secs )); do sleep 1; echo $SECONDS; done
         - script: failing it
 
-  - name: a.b-c-d-e-f-_runCI
+  - name: ab-c-d-e-f-_runCI
     type: runCI
     steps:
       - IN: runSh
